@@ -173,7 +173,6 @@
                     <version>${plugins.maven.surefire.version}</version>
                     <configuration>
                         <useSystemClassLoader>false</useSystemClassLoader>
-                        <argLine>--illegal-access=permit</argLine>
                     </configuration>
                 </plugin>
 
